--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@ body{
     height: 100vh;
 }
 .formulario{
-    width: 400px;
+    width: 200px;
     margin: 0 auto;
-    padding: 50px;
+    padding:60px;
+    background-size: cover;
     background-color: darkslategray;
     background-image: linear-gradient(#2b6757, #54917f);
     color: #fff;
     border-radius: 15px;
     box-shadow: 10px 17px 17px black;
+    
 }
 .formulario h2{
     font-family: sans-serif;
