--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
 }
 input{
     background-color: #54917f;
+    color: #fff;
     padding: 6px;
     border-radius: 6px;
     border: 1px #fff solid;
